[Fixed] Vanilla JS Datepicker: Increase z-index
DB Version: V.4.9.2-2025.09.22.00
Files Version: V.4.9.2-2025.10.20.00

--- a/core/css/nubuilder4.css
+++ b/core/css/nubuilder4.css
@@ -3078,3 +3078,7 @@ pre.nuFormInfoBrowseSQL {
 .nu-info-bar--dark .nu-info-bar__close:hover {
 	background-color: rgba(255, 255, 255, 0.2);
 }
+
+.datepicker-dropdown {
+	z-index: 9999;
+}
